--- a/src/index.css
+++ b/src/index.css
@@ -69,3 +69,11 @@ button:focus-visible {
     color: #747bff;
   }
 }
+
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  display: none;
+}
+
